[DEV] Update concours
